@@ -260,6 +260,8 @@ typedef struct __cob_settings {
 	unsigned int	cob_file_vbisam;	/* Create ISAM files in old VB-ISAM format if possible */
 	unsigned int	cob_file_isnodat;	/* Create ISAM 'data file' without '.dat' if possible */
 	unsigned int	cob_stop_run_commit;/* On STOP RUN, should it COMMIT, Default is ROLLBACK */
+	unsigned int	cob_concat_name;	/* Concatenated sequential input file names */
+	unsigned char	cob_concat_sep[4];	/* Concatenated sequential file name separater (+)*/
 	char		*cob_dictionary_path;	/* Place to write filename.dd stats */
 	char		*cob_stats_filename;	/* Place to write I/O stats */
 	char 		*cob_file_path;
